Fix spacing for add comment link

--- a/style.css
+++ b/style.css
@@ -830,7 +830,7 @@ div.comment ul.links li {
   font-size:11px;
   }
 
-div.node ul.links li.comment_add {
+div.node ul.links li.comment-add {
   padding:5px 5px 0px;
   margin-right:5px;
   font-size:11px;
